# rust-threshold-secret-sharing

./: Cargo.toml  README.md  android-linker.sh  build-ndk-so.sh  custom.sh
.cargo/: config
benches/: fields.rs  numtheory.rs  packed.rs
examples/: example1.rs  homomorphic.rs  shamir.rs  sharing.rs
src/: lib.rs  multi.rs  numtheory.rs  packed.rs  ref_ffts.rs  shamir.rs  single.rs
src/fields/: fft.rs  ffts.rs  lazy_zp.rs  mod.rs  montgomery.rs  naive_zp.rs
