[package]
name = "threshold-secret-sharing"
version = "0.1.2"
authors = [
  "Morten Dahl",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of various threshold secret sharing schemes"
keywords = [
  "secret-sharing",
  "Shamir",
  "packed",
  "secure-computation",
  "MPC",
  "multi-party-computation",
  "crypto",
  "cryptography"
]
homepage = "https://github.com/snipsco/rust-threshold-secret-sharing"
documentation = "https://github.com/snipsco/rust-threshold-secret-sharing"
license = "MIT/Apache-2.0"

[features]
paramgen = ["primal"]

[dependencies]
rand = "0.3.*"
primal = { version = "0.2", optional = true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "packed"
harness = false
